--- a/wwwsrc/src/assets/scss/main.scss
+++ b/wwwsrc/src/assets/scss/main.scss
@@ -3,21 +3,30 @@
 @import "./_transitions.scss";
 @import "./_overrides.scss";
 
-:root {
-  --grey: #f6f6f6;
+// :root {
+//   --grey: #f6f6f6;
+// }
+
+// #app {
+//   display: flex;
+//   flex-direction: column;
+//   min-height: 100vh;
+//   background-color: $body-bg;
+//   overflow-x: hidden;
+//   scroll-behavior: smooth;
+// }
+
+// main {
+//   flex-grow: 1;
+//   display: flex;
+//   align-items: stretch;
+// }
+
+.radius {
+  border-radius: 15px;
 }
 
-#app {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  background-color: $body-bg;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
-}
-
-main {
-  flex-grow: 1;
-  display: flex;
-  align-items: stretch;
-}
+.grow:hover {
+  transform: scale(1.01);
+  transition: all .25s ease-in-out;
+  }
